Add Dockerfile for Render deployment and update Architecture diagram